--- a/config.org
+++ b/config.org
@@ -1889,6 +1889,15 @@ This function is meant to be run as as part of `org-checkbox-statistics-hook`"
                   (org-todo 'todo)))))))))
 #+end_src
 
+*** PDF Tools
+
+We reduce the default zoom factor to have more leeway between zoom levels.
+
+#+begin_src elisp
+(after! pdf-tools
+  (setq! pdf-view-resize-factor 1.05))
+#+end_src
+
 *** Personal information
 
 Some functionality uses this to identify you, e.g. GPG configuration, email
