--- a/config.org
+++ b/config.org
@@ -1692,6 +1692,15 @@ configuration of evil-org.
              (:unless mozc-mode  :i "RET"        (cmd! (org-return electric-indent-mode))))))))
 #+end_src
 
+*** nodejs
+
+~nodejs-repl~ is a super useful package. However, it's missing a comfortable way to interact with promises. We can change that with an experimental =nodejs=.
+
+#+begin_src elisp
+(after! nodejs-repl
+  (setq nodejs-repl-arguments '("--experimental-repl-await")))
+#+end_src
+
 *** nvm DEPRECATED
 
 #+begin_quote
@@ -1962,6 +1971,7 @@ Load and activate =org-edna= together with org-mode.
   :hook
   '(org-mode . org-edna-mode)
 #+end_src
+
 Make =org-edna= to trigger in any state change except done.
 
 #+begin_src elisp
@@ -2003,24 +2013,26 @@ With the package installed, we are ready to define ~org-agenda-custom-commands~ 
                                (tags priority-down category-keep)
                                (search category-keep)))
 (org-super-agenda-groups '((:name "Today"
-                            :date today
-                            :discard (:todo ("IDEA")))
+                            :and (:date today
+                                  :not (:todo "IDEA")))
                            (:name "Next Items"
                             :todo "NEXT")
                            (:name "Important"
                             :priority "A")
                            (:name "Incoming Events"
-                            :todo "EVENT"
-                            :date t)
+                            :and (:todo "EVENT"
+                                  :not (:date today)))
+                           (:name "Scheduled"
+                            :and (:priority<= "B"
+                                  :scheduled future))
+                           (:name "Candidates"
+                            :priority "B")
                            (:name "Active projects"
                             :todo "PROJ")
-                           (:name "Misc"
-                            :priority<= "B"
-                            :scheduled future)
-                           (:name "In hold"
-                            :todo "WAIT")
                            (:name "Ideas"
-                            :todo "IDEA"))))
+                            :todo "IDEA")
+                           (:name "In hold"
+                            :todo "WAIT"))))
 #+end_src
 
 There are a few clashes between ~evil-org-agenda-mode-map~ and ~org-super-agenda-header-map~. To remove them, we simply override the latter keymap, after loading both ~evil-org-agenda~ and ~org-super-agenda~.
@@ -2048,9 +2060,9 @@ Define the custom function, switch entry to 'DONE' when all sub-entries are
   "Change KEYWORD state to `DONE` if all subheadings are also `DONE`, otherwise
 KEYWORD state is conserved.
 
-N-DONE are the number of subheadings that are done and N-NOT=DONE the number of
-headings that are not done. This function is meant to be run as as part of
-`org-after-todo-statistics-hook`"
+N-DONE are the number of subheadings that are done and N-NOT-DONE the number of
+headings that are not done. This function is meant to be run as part of
+`org-after-todo-statistics-hook'."
   (let (org-log-done org-log-states)
     (org-todo (if (= n-not-done 0)
                   "DONE"
@@ -2107,7 +2119,7 @@ clients, file templates and snippets.
 
 #+begin_src elisp
 (setq! user-full-name "Daniel Levy Moreno"
-      user-mail-address "daniellevymoreno@gmail.com")
+       user-mail-address "daniellevymoreno@gmail.com")
 #+end_src
 
 *** Prescient
